# meshcore-hub

./: .agentmap.yaml  .env.example  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  SCHEMAS.md  TASKS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
.plans/2026/03/09/01-security-fixes/: changelog.md  prd.md  prompt.md  state.yaml  summary.md  tasks.yaml
.plans/2026/03/09/01-security-fixes/reviews/: prd.md  tasks.md
.plans/2026/03/09/01-security-fixes/reviews/cycle/: 001.yaml
.plans/2026/03/17/01-multibyte-support/: changelog.md  prd.md  prompt.md  state.yaml  summary.md  tasks.yaml
.plans/2026/03/17/01-multibyte-support/reviews/: prd.md  tasks.md
.plans/2026/03/17/01-multibyte-support/reviews/cycle/: 001.yaml
patches/: @michaelhart+meshcore-decoder+0.2.7.patch
src/meshcore_hub/api/: app.py  auth.py  cli.py  dependencies.py  metrics.py
src/meshcore_hub/api/routes/: dashboard.py  nodes.py
src/meshcore_hub/collector/: cli.py  letsmesh_decoder.py  letsmesh_normalizer.py  subscriber.py
src/meshcore_hub/collector/handlers/: advertisement.py  message.py
src/meshcore_hub/common/: config.py  mqtt.py
src/meshcore_hub/common/models/: trace_path.py
src/meshcore_hub/common/schemas/: events.py  messages.py
src/meshcore_hub/web/: app.py
src/meshcore_hub/web/static/css/: app.css
src/meshcore_hub/web/static/js/spa/: components.js
src/meshcore_hub/web/static/js/spa/pages/: dashboard.js  home.js  messages.js  node-detail.js  nodes.js
src/meshcore_hub/web/static/js/spa/pages/admin/: members.js  node-tags.js
src/meshcore_hub/web/static/locales/: en.json  languages.md  nl.json
src/meshcore_hub/web/templates/: spa.html
tests/test_api/: test_auth.py  test_dashboard.py  test_nodes.py  test_trace_paths.py
tests/test_collector/: test_letsmesh_decoder.py  test_letsmesh_normalizer.py  test_subscriber.py
tests/test_collector/test_handlers/: test_advertisement.py
tests/test_common/: test_config.py  test_models.py  test_mqtt.py
tests/test_web/: conftest.py  test_admin.py  test_app.py  test_messages.py
